Added some more typing added insertMultiple function and tests added hasValues function and tests fixed a bug

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "hudsoncassidy/php-trees",
-    "description": "PHP implmentation of Trees",
+    "description": "PHP implementation of Trees",
     "authors": [
         {
             "name": "Hudson Cassidy",
