Added RopeFunctions file Added start of the rope data structure and tests most function signatures are complete slight update to readme composer.lock updated

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
     "autoload": {
         "psr-4": {
             "PhpTrees\\": "src/PhpTrees/"
-        }
+        },
+        "files": [
+            "src/PhpTrees/RopeFunctions.php"
+        ]
     },
     "require-dev": {
         "phpunit/phpunit": "^8"
