Added commands for code coverage reports through php unit and xcode a composer command 'coverage' is provided for ease of use updated git ignore Note in the future, code coverage will be part of the CI build

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "phpunit/phpunit": "^8"
     },
     "scripts": {
-        "test": "./vendor/bin/phpunit --colors=always --bootstrap vendor/autoload.php tests"
+        "test": "./vendor/bin/phpunit --colors=always --bootstrap vendor/autoload.php tests",
+        "coverage": "./vendor/bin/phpunit -c phpunit.coverage.xml --do-not-cache-result"
     }
 }
