--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -20,3 +20,6 @@ jobs:
 
     - name: Run test suite
       run: composer run-script test
+
+    # - name: Run Code Coverage
+    #   run: composer run-script coverage
