add coverage to git actions

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -31,5 +31,5 @@ jobs:
     - name: Run test suite
       run: composer run-script test
 
-    # - name: Run Code Coverage
-    #   run: composer run-script coverage
+    - name: Run Code Coverage
+      run: composer run-script coverage
