Add equality test to comparators

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,11 @@
             "src/PhpTrees/RopeFunctions.php"
         ]
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^9"
     },
